--- a/index.html
+++ b/index.html
@@ -3,13 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"  crossorigin="anonymous"  />
     <title>Portifólio</title>
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <img src="img/244346bbf19e88b886818100955f2812.jpg" alt="Foto principal do projeto">
-    <p>Eu sou o Guilherme</p>
-    <h1>Eu ensino estética</h1>
-    <p>Eu sou especialista em estética com faculdade realizada e pós graduação</p>
+    <header class="container"> 
+        <img src="img/244346bbf19e88b886818100955f2812.jpg" alt="Foto principal do projeto">
+        <p>Eu sou o Guilherme</p>
+        <h1>Eu trabalho estética</h1>
+        <p>Eu sou especialista em estética com faculdade realizada e pós graduação</p>
+
+    </header> 
+   
+
+
+
+    <script
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"
+  ></script>
 </body>
 </html>
