--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header class="container"> 
-        <img src="img/244346bbf19e88b886818100955f2812.jpg" alt="Foto principal do projeto">
+    <header class="container text-center"> 
+        <img src="img/244346bbf19e88b886818100955f2812.jpg" class="rounded-circle"alt= "Foto principal do projeto">
         <p>Eu sou o Guilherme</p>
-        <h1>Eu trabalho estética</h1>
-        <p>Eu sou especialista em estética com faculdade realizada e pós graduação</p>
+        <h1>Eu trabalho com biomedicina esteta</h1>
+        <p>Eu sou especialista em biomedicina com faculdade realizada e pós graduação em estética</p>
     </header> 
    
 
